# cmake-tipi-provider

./: LICENSE  README.md  tipi_provider.cmake
example/Boost/: CMakeLists.txt  boost.cpp
example/Boost/.tipi/: deps  env
example/Catch2/: CMakeLists.txt  catch2.cpp
example/SBOM/: CMakeLists.txt  README.md
example/SBOM/.tipi/cmake/: sbom.cmake  version.cmake  version.h.in  version.sh.in
